fix scrollbar css

--- a/style.css
+++ b/style.css
@@ -153,19 +153,20 @@ select {
 }
 
 #scrollbarContainer {
-    position: fixed; /* Fixed position on the right side */
-    right: 0;        /* Align to the right edge */
-    top: 0;          /* Align to the top edge */
-    width: 10px;     /* Width of the scrollbar */
-    height: 100%;    /* Full height of the viewport */
-    overflow: hidden;/* Hide overflow content */
-    background-color:#302c2e;
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 10px;
+    height: 100%;
+    overflow: hidden;
+    background-color: #302c2e;
     z-index: 1000;
 }
-  
+
 #scrollbar {
-    width: 100%;     /* Full width of the container */
-    height: 0%;     /* Example height, you can adjust this */
-    background-color: #a0938e; /* Color of the scrollbar */
-    cursor: pointer; /* Cursor style when hovering over the scrollbar */
+    width: 100%;
+    height: 0%;
+    background-color: #a0938e;
+    cursor: pointer;
+    position: absolute; /* or relative */
 }
